k8s/nlp-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlp-api
  labels:
    app: nlp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nlp-api
  template:
    metadata:
      labels:
        app: nlp-api
    spec:
      containers:
      - name: nlp-api
        image: chipembere13/nlp-api:latest
        ports:
        - containerPort: 8080
