k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nlp-api-service
spec:
  type: NodePort
  selector:
    app: nlp-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
