k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nlp-api-ingress
spec:
  rules:
    - host: nlp-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nlp-api-service
                port:
                  number: 8080
